2006-05-21  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* installer/dc.ico: Updated icon

2006-05-18  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml:
	* doc/en/dcwaterdesign.xml:
	* installer/dc_water_design_extension.nsi: Version number is 2.12.3 now

2006-05-15  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.writeinpfile.ave: Added experimental writing
	of OptiDesigner files
	* doc/en/dcwaterdesign.xml: Mentioning experimental OptiDesigner
	files, set economic diameter function

2006-05-04  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: Added Thiessen polygon tutorial; Switched
	from DocBook article to book; added index

2006-04-03  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.loadresultsforstep.ave: Remove index on timestep
	to avoid rare loading problems

2006-04-02  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.popup.setlifecyclestatus.ave:
	* dcwatdes.view.popup.togglestatus.ave: Added two new context menus
	
2006-03-30  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.popup.pipes.seteconomicdiameter.ave: Added context menu
	function to select the economic diameter
	
2006-03-26  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.view.digitizepipe.ave: Added 250 to the list of
	diameters
	* dcwatdes.model.epanet.loadresultsforstep.ave: Unjoining and unlinking
	at the end of the script

2006-03-23  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.loadresultsforstep.ave: 
	* dcwatdes.model.epanet.run.ave: Unjoining and unlinking result tables
	to avoid error messages
	* dcwatdes.view.digitizepipe.ave: Offer default list of diameters when
	digitizing pipes
	
2005-12-01  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: Added information that it might be necessary
	to increase the snapping radius when running "Make EPANET Model"

2005-10-02  Steffen Macke <Steffen_Macke@dorsch.com.jo>
